# bitmask

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md  vcpkg.json
.github/workflows/: ctest.yml  pages.yml
cmake/: DeadDevBitmaskConfig.cmake.in  deaddev-bitmask-config.cmake.in
docs/: .gitignore  Doxyfile.in  MAINPAGE.md
example/: CMakeLists.txt  main.cpp
include/deaddev/: bitmask.hpp
tests/: CMakeLists.txt  tests.cpp
